# advent-of-code

./: .gitignore  1.py  10.py  13.py  16.py  3.py  4.py  5.py  8.py  9.py  Makefile  Pipfile  README.md  pyproject.toml  setup.py  stats.py  template.py  utils.py
0/: 0.py
12/: 12.py
13/: 13.py
14/: 14.py
16/: 16.py
18/: 18.py
2021/: README.md
2021/1/: 1.py
2021/10/: 10.py
2021/11/: 11.py
2021/12/: 12.py
2021/13/: 13.py  13_dots.txt
2021/14/: 14.py
2021/15/: 15.py
2021/16/: 16.py
2021/18/: 18.py  18.txt
2021/2/: 2.py
2021/20/: 20.py
2021/3/: 3.py
2021/4/: 4.py
2021/5/: 5.py
2021/6/: 6.py
2021/7/: 7.py
2021/8/: 8.py
2021/9/: 9.py
2022/: README.md
2022/1/: 1.py
2022/10/: 10.py
2022/11/: 11.py
2022/12/: 12.py
2022/13/: 13.py
2022/2/: 2.py
2022/21/: 21.py
2022/3/: 3.py
2022/4/: 4.py
2022/5/: 5.py
2022/6/: 6.py
2022/7/: 7.py
2022/8/: 8.py
2022/9/: 9.py
2023/: README.md
2023/1/: 1.py
2023/13/: 13.py
2023/14/: 14.py
2023/15/: 15.py
2023/16/: 16.py
2023/2/: 2.py
2023/22/: 22.py
2023/3/: 3.py
2023/4/: 4.py
2023/5/: 5.py
2023/6/: 6.py
2023/7/: 7.py
2023/8/: 8.py
2023/9/: 9.py
7/: 7.py
